[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caesar-cli"
version = "0.1.0"
description = "Educational-yet-practical Caesar cipher command line interface"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Justin Guida" }
]
license = { text = "MIT License" }
keywords = ["caesar", "cipher", "cryptography", "education", "cli"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Environment :: Console",
    "Intended Audience :: Education",
]
dependencies = []

[project.scripts]
caesar = "caesarcipher.cli:main"

[project.optional-dependencies]
rich = ["rich>=13"]
repl = ["prompt_toolkit>=3"]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "mypy>=1.10",
    "ruff>=0.4",
    "build>=1.0",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/jguida941/caesar_cipher"
Issues = "https://github.com/jguida941/caesar_cipher/issues"
Source = "https://github.com/jguida941/caesar_cipher"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["caesarcipher"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.mypy]
python_version = "3.9"
strict = true
mypy_path = "src"
explicit_package_bases = true
